# Modules/PaymentProvider/Models/Plan.php
@@ -47,4 +47,8 @@ class Plan extends Model
     public function paymentProvider(){
         return $this->belongsTo(PaymentProvider::class);
     }
+
+    public function currency(){
+        return $this->belongsTo(Currency::class, 'currency_id');
+    }
 }
